# python_fast_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: main.py
