[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["imaima <imaima@dummy.address>"]
readme = "README.md"
packages = [{include = "sample_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
